// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow should accept alignItems prop 1`] = `
.emotion-0 {
  margin-bottom: 0rem;
  margin-top: 0rem;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  display: inline-block;
}

.emotion-0:first-of-type {
  margin-left: 0;
}

.emotion-0:last-of-type {
  margin-right: 0;
}

.emotion-0:empty {
  display: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      class="emotion-0"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div>
        2
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div>
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Flow should accept direction prop 1`] = `
.emotion-0 {
  margin-bottom: 0rem;
  margin-top: 0rem;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  display: inline-block;
}

.emotion-0:first-of-type {
  margin-top: 0;
}

.emotion-0:last-of-type {
  margin-bottom: 0;
}

.emotion-0:empty {
  display: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      class="emotion-0"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div>
        2
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div>
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Flow should accept hSpacing prop 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  margin-bottom: 0rem;
  margin-top: 0rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
  display: inline-block;
}

.emotion-0:first-of-type {
  margin-left: 0;
}

.emotion-0:last-of-type {
  margin-right: 0;
}

.emotion-0:empty {
  display: none;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      class="emotion-0"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        2
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Flow should accept justifyContent prop 1`] = `
.emotion-0 {
  margin-bottom: 0rem;
  margin-top: 0rem;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  display: inline-block;
}

.emotion-0:first-of-type {
  margin-left: 0;
}

.emotion-0:last-of-type {
  margin-right: 0;
}

.emotion-0:empty {
  display: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      class="emotion-0"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div>
        2
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div>
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Flow should accept the style prop 1`] = `
.emotion-0 {
  margin-bottom: 0rem;
  margin-top: 0rem;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  display: inline-block;
}

.emotion-0:first-of-type {
  margin-left: 0;
}

.emotion-0:last-of-type {
  margin-right: 0;
}

.emotion-0:empty {
  display: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: red;
}

<div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-0"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div>
        2
      </div>
    </div>
  </div>
</div>
`;

exports[`Flow should accept vSpacing prop 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  margin-bottom: 1.25rem;
  margin-top: 1.25rem;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  display: inline-block;
}

.emotion-0:first-of-type {
  margin-left: 0;
}

.emotion-0:last-of-type {
  margin-right: 0;
}

.emotion-0:empty {
  display: none;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      class="emotion-0"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        2
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Flow should wrap each child on an element with horizontal spacing 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  margin-bottom: 0rem;
  margin-top: 0rem;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  display: inline-block;
}

.emotion-0:first-of-type {
  margin-left: 0;
}

.emotion-0:last-of-type {
  margin-right: 0;
}

.emotion-0:empty {
  display: none;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      class="emotion-0"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        2
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        3
      </span>
    </div>
  </div>
</div>
`;
